--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,4 @@
-<h1>New article</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
-
-<%= form_for :article, url: articles_path do |f| %>
+<%= form_for @article do |f| %>
  
   <% if @article.errors.any? %>
     <div id="error_explanation">
@@ -35,5 +29,3 @@
   </p>
  
 <% end %>
- 
-<%= link_to 'Back', articles_path %>
