--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,9 @@
 <h1>Editing article</h1>
+
+<%= render 'form' %>
+ 
+<%= link_to 'Back', articles_path %>
+
  
 <%= form_for :article, url: article_path(@article), method: :patch do |f| %>
  
